# shoggoth

./: .env.example  .gitignore  README.md  Shoggoth.icns  Shoggoth.spec  ShoggothExporter.js  ShoggothStandalone.spec  card.py  data_input_stream.py  editor.py  encounter_set.py  eon.py  file_monitor.py  guide.md  main.py  main2.py  pdftest.py  project.py  pyproject.toml  renderer.py  requirements.txt  rich_text.py  run.sh  shoggoth.json  shoggoth.kv  test_pdf.html
.github/: FUNDING.yml
.github/workflows/: python-app.yml
assets/defaults/: act.card  act_back.card  agenda.card  agenda_back.card  agenda_front_portrait.card  agenda_portrait.card  asset.card  asset_story.card  back_portrait.card  chaos.card  concealed.card  customizable.card  divider.card  enemy.card  enemy_location.card  event.card  game.card  guide75.card  guide_a4.card  guide_letter.card  investigator.card  investigator_back.card  key.card  key_back.card  location.card  location_back.card  mini_investigator.card  pack_cover.card  scenario.card  skill.card  story.card  treachery.card  treachery_location.card  ultimatum.card  weakness_enemy.card  weakness_treachery.card
assets/overlays/: basic_weakness_skill.jp2  box_res_line.jp2  box_res_line_red.jp2  box_s_a_line.jp2  box_tracker.jp2  box_tracker_line.jp2  guide75_title-de.jp2  guide75_title-fr.jp2  guide75_title-it.jp2  sanity_base.jp2  slot-_foot.jp2  stamina_base.jp2  story_event_overlay.jp2
assets/templates/: act.jp2  agenda-front-hires.jp2  agenda-front.jp2  agenda.jp2  chaos.jp2  concealed.jp2  concealed_back.jp2  concealed_decoy.jp2  concealed_named_decoy.jp2  customizable.jp2  customizable_back.jp2  enemy_location.jp2  guide75_title.jp2  guide_a4_title.jp2  guide_letter_empty.jp2  guide_letter_title.jp2  investigator_back_survivor_parallel.jp2  investigator_survivor_parallel.jp2  key.jp2  key_back.jp2  location.jp2  location_back.jp2  location_back_s_t.jp2  location_s_t.jp2  story_chaos_full.jp2  treachery_location.jp2
documentation/: Shoggoth Manual.md  advanced-json.md  exporting.md  manual.md  text-formatting.md  translations.md
plugins/sublime/: Default.sublime-commands  README.md  Shoggoth.sublime-settings  shoggoth_preview.py
shoggoth/: Shoggoth Manual.md  __init__.py  __main__.py  arkham_build.py  card.py  dialogs.py  display_mode.py  editor.py  editors.py  encounter_editor.py  encounter_set.py  export_helpers.py  export_profile.py  face_editors.py  file_monitor.py  files.py  floating_label_widget.py  goto_dialog.py  guide.py  guide_editor.py  i18n.py  launcher.py  location_view.py  main.py  main_qt.py  main_window.py  pdf_exporter.py  perf.py  pillow_svg.py  preview_widget.py  project.py  project_editor.py  project_writer.py  renderer.py  rich_text.py  run.py  settings.py  shoggoth.json  shoggoth.kv  strange_eons.py  (+11 more)
shoggoth/translations/: de.json  en.json  es.json  fr.json  pt.json  zh.json
shoggoth/ui/: __init__.py  app.py  arkham_build_dialog.py  campaign_editors.py  card_editor.py  card_widgets.py  command_palette.py  dialogs.py  editor_widgets.py  encounter_editor.py  encounter_editors.py  export_runner.py  export_widgets.py  face_editor.py  face_editor_factory.py  field_widgets.py  floating_label_widget.py  goto_dialog.py  guide_editor.py  image_export_dialog.py  investigator_editors.py  location_view.py  main_window.py  pdf_export_dialog.py  (+14 more)
src/: card.py  card_file_handler.py  editor.py  encounter_set.py  file_monitor.py  main.py  project.py  renderer.py  rich_text.py  shoggoth.kv  viewer.kv  viewer.py
test_case/: test_case.json
(+16 files in other folders)
